# mio-aio

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/mio/event_imp/: trait.Evented.js
mio_aio/: LioCb.t.html  all.html  enum.AioFsyncMode.html  enum.BufRef.html  enum.Errno.html  enum.LioError.html  enum.LioOpcode.html  index.html  sidebar-items.js  struct.AioCb.html  struct.LioCb.html
mio_aio/aio/: BufRef.t.html  LioError.t.html  enum.BufRef.html
src/: aio.rs  lib.rs
src/mio_aio/: aio.rs.html  lib.rs.html
tests/: lio_listio_incomplete.rs  test.rs
