[package]
name = "mio-aio"
edition = "2018"
version = "0.7.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/asomers/mio-aio"
description = """
POSIX AIO bindings for mio
"""
categories = ["asynchronous", "filesystem"]
keywords = ["io", "async", "non-blocking", "aio"]
documentation = "https://docs.rs/mio-aio"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
default = []
tokio = []

[dependencies]
mio = "0.8.0"
nix = {version = "0.27.0", default-features = false, features = ["aio", "event"] }
pin-utils = "0.1.0"

[dev-dependencies]
assert-impl = "0.1"
mio = { version = "0.8.0", features = ["os-poll"] }
nix = {version = "0.27.0", default-features = false, features = ["aio", "event", "feature"] }
sysctl = "0.1"
tempfile = "3.4"

[[test]]
name = "functional"
path = "tests/test.rs"
