[package]
name = "mio-aio"
edition = "2018"
version = "0.7.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/asomers/mio-aio"
description = """
POSIX AIO bindings for mio
"""
categories = ["asynchronous", "filesystem"]
keywords = ["io", "async", "non-blocking", "aio"]
documentation = "https://asomers.github.io/mio-aio/mio_aio/"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
default = []
tokio = []

[dependencies]
mio = "0.8.0"
nix = { version ="0.26.1", default-features = false, features = ["aio"] }
pin-utils = "0.1.0"

[dev-dependencies]
assert-impl = "0.1"
log = "0.3.4"
mio = { version = "0.8.0", features = ["os-poll"] }
nix = { version = "0.26.1", default-features = false, features = ["aio", "feature"] }
sysctl = "0.1"
tempfile = "3.4"

[[test]]
name = "functional"
path = "tests/test.rs"
